Moved images out to parent repository

--- a/LoopLab/css/style.css
+++ b/LoopLab/css/style.css
@@ -1,5 +1,5 @@
 #home {
-    background-image: url('/LoopLab/img/looplab/home.jpg');
+    background-image: url('../../ProjectImages/looplab/home.jpg');
     background-size: cover;
 }
 
