--- a/Projects/LoopLab/css/style.css
+++ b/Projects/LoopLab/css/style.css
@@ -1,5 +1,5 @@
 #home {
-    background-image: url('../../ProjectImages/looplab/home.jpg');
+    background-image: url('../img/home.jpg');
     background-size: cover;
 }
 
