--- a/Projects/Mizuxe/css/style.css
+++ b/Projects/Mizuxe/css/style.css
@@ -9,9 +9,14 @@ div.nav li, div.nav p {
 }
 
 .blue-overlay {
-    background-color: rgba(50, 146, 166, .8)
+    background-color: rgba(50, 146, 166, .8);
 }
 
 .nav {
     opacity: .9;
+}
+
+.btn-new-primary {
+    background-color: rgb(50, 146, 166);
+    color: white;
 }
