--- a/Projects/Mizuxe/scss/_variables.scss
+++ b/Projects/Mizuxe/scss/_variables.scss
@@ -44,6 +44,7 @@ $yellow:  #ffc107 !default;
 $green:   #28a745 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
+$new-blue:  rgb(50, 146, 166);
 
 $colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
@@ -66,7 +67,7 @@ $colors: map-merge(
   $colors
 );
 
-$primary:       $blue !default;
+$primary:       $new-blue !default;
 $secondary:     $gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
